<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/txtView_enterMobileNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/enterMobileNumber" />

    <TextView
        android:id="@+id/txtView_mobileNumberTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtView_enterMobileNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/mobileNumberHint" />

    <EditText
        android:id="@+id/editTxt_mobileNumber"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtView_mobileNumberTxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="phone"
        android:maxLength="10"/>

    <Button
        android:id="@+id/btn_registerActivityPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTxt_mobileNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/next"
        android:onClick="registerActivityPassword"/>


</RelativeLayout>